Reworked scripts custom scripts
Every fine in the subtree of ~/.scripts now gets a symlink in the
~/.scripts/bin directory. The update_scripts script updates these links.

--- a/.config/startpage/src/startpage.html
+++ b/.config/startpage/src/startpage.html
@@ -32,7 +32,7 @@
                 <p class="list_title" id="e">School</p>
                 <a href="https://outlook.office.com.mcas.ms/mail/inbox/id/AAQkAGJmYzIyNWRjLWUzMzctNDE5My1iYzY2LTE2ZjgzNTZlOWMwMAAQADoSJpf%2BaXlBvVoChtGRfH4%3D">School Mail</a>
                 <a href="https://sdu.itslearning.com/index.aspx?SessionExpired=0">Itslearning</a>
-                <a href="https://mcas-proxyweb.mcas.ms/certificate-checker?login=false&originalUrl=https%3A%2F%2Fsyddanskuni-my.sharepoint.com.mcas.ms%3A443%2F%3Ao%3A%2Fg%2Fpersonal%2Fsileb18_student_sdu_dk%2FEnVe-d6XZclMiUIDEVJ3yMsBJK6VEP-wgXCVtLOnVp0yQw%3Fe%3D5%253aEZi0LA%26at%3D9%26McasTsid%3D20893&McasCSRF=01187866dbca7dd1524702283d85ff75f888cb1a64897738d2337140f98e1a8f">OneNote</a>
+                <a href="https://digitaleksamen.sdu.dk/studerende">Digital Eksamen</a>
             </div>
         </div>
         <script async type="text/javascript" src="script.js"></script>
